--- a/templates/symptoms.html
+++ b/templates/symptoms.html
@@ -34,9 +34,9 @@
 
         <label for="language">Language:</label>
         <select id="languageSelect">
-            <option value="en-IN" selected>English</option>
-            <option value="hi-IN">Hindi</option>
-            <option value="or-IN">Odia</option>
+            <option value="en" selected>English</option>
+            <option value="hi">Hindi</option>
+            <option value="or">Odia</option>
         </select>
 
 
